# pulseiq-ai-data-platform

./: .env.example  .gitignore  CHALLENGES_AND_SOLUTIONS.md  PRODUCTION_READINESS_IMPROVEMENTS.md  README.md  debug_csat_issue.py  pyproject.toml  requirements.txt  test_golden_sql_fix.py
api/: __init__.py  main.py  observability.py
api/schemas/: __init__.py  chat.py
api/services/: __init__.py  chat_service.py  schema_context.py  sql_service.py  sql_validator.py  table_selector.py  vector_service.py
data/: golden_sql.json
data_gen/: __init__.py  main.py
data_gen/generators/: __init__.py  customers.py  events.py  orders.py  products.py  tickets.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: schema.yml  sources.yml
embeddings/: __init__.py  chunking.py  config.py  data_source.py  indexer.py  main.py  query.py  search.py
evals/: __init__.py  run.py  test_cases.json  test_cases_top20.json  test_cases_v2.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
ingestion/: __init__.py  main.py  seed_qdrant.py
ingestion/loaders/: __init__.py  customers.py  events.py  orders.py  products.py  tickets.py
learning/: 00_learning_index.md  01_project_overview.md  02_data_generation_and_ingestion.md  03_dbt_transformations_and_serving_models.md  04_semantic_layer_and_schema_context.md  05_embeddings_and_retrieval.md  06_chat_orchestration_and_answering.md  07_evaluation_and_quality.md  08_frontend_and_user_experience.md  09_end_to_end_request_lifecycle.md  10_what_to_learn_next.md
(+17 files in other folders)
